fix: expose local API docs endpoints